# bt_api_coinswitch

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/bt_api_coinswitch/: __init__.py  plugin.py  registry_registration.py
src/bt_api_coinswitch/containers/: __init__.py
src/bt_api_coinswitch/containers/accounts/: __init__.py
src/bt_api_coinswitch/containers/balances/: __init__.py
src/bt_api_coinswitch/containers/bars/: __init__.py
src/bt_api_coinswitch/containers/orderbooks/: __init__.py
src/bt_api_coinswitch/containers/orders/: __init__.py
src/bt_api_coinswitch/containers/tickers/: __init__.py
src/bt_api_coinswitch/errors/: __init__.py
src/bt_api_coinswitch/exchange_data/: __init__.py
src/bt_api_coinswitch/feeds/live_coinswitch/: __init__.py  request_base.py  spot.py
tests/: test_coinswitch_ticker.py
tests/containers/exchanges/: test_coinswitch_exchange_data.py
tests/containers/tickers/: test_coinswitch_ticker.py
