[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_coinswitch"
version = "0.1.0"
description = "CoinSwitch exchange plugin for bt_api framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["bt_api_base"]

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_coinswitch"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "I",
  "UP",
  "F",
  "E",
  "W",
  "TC",
  "SIM",
]
ignore = [
  "TC002",
  "TC004",
  "SIM102",
  "SIM108",
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["bt_api_coinswitch"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
