[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_coinswitch"
version = "0.1.0"
description = "CoinSwitch exchange plugin for bt_api framework"
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
requires-python = ">=3.9"
dependencies = ["bt_api_base"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "I",
  "UP",
  "F",
  "E",
  "W",
  "TC",
  "SIM",
]
ignore = [
  "TC002",
  "TC004",
  "SIM102",
  "SIM108",
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]
"examples/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]
"scripts/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]


[tool.ruff.lint.isort]
known-first-party = ["bt_api_coinswitch"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "kline: Kline/bar data tests",
    "orderbook: Orderbook/depth data tests",
    "ticker: Public ticker data tests",
    "network: Tests requiring network access",
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
]

